--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,44 @@
 body {
+    width: 100%;
     font-family: Arial, sans-serif;
-    background-color: #272727; /* 背景颜色为白色 */
-    color: white; /* 文字颜色设置为白色 */
+    background-color: #ffffff; /* 背景颜色为白色 */
+    color: rgb(0, 0, 0); /* 文字颜色设置为黑色 */
     text-align: center; /* 文本水平居中 */
     margin: 0;
     padding: 0;
+    letter-spacing: 1px; /* 设置字间距为1像素 */
 }
 
 #game-description {
-    text-align: left; /* 文本左对齐 */
-    text-indent: 2em; /* 首行缩进两个字符宽度 */
-    width: 60%; /* 设置容器宽度，可根据需要调整 */
-    margin-left: auto; 
-    margin-right: auto;
-    box-sizing: border-box; /* 确保边框和内边距包含在宽度内 */
+    text-align: left;
+    border: 2px solid #35495e; /* 定义边框宽度、样式和颜色 */
+    border-radius: 12px; /* 定义边框圆角 */
+    margin: 20px auto; /* 可选：添加外边距，使卡片居中 */
+    padding: 20px; /* 可选：添加内边距，使内容与边框之间有间隔 */
+    width: 50%; /* 可选：设置卡片宽度 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 可选：添加阴影效果 */
+    text-indent: 2em; /* 首行缩进两个字符 */
 }
+
+
+#letter {
+    width: 30%; /* 设置信件的宽度 */
+    margin: 40px auto; /* 上下外边距为50px，左右外边距自动，使信件居中显示 */
+    padding: 20px; /* 设置内边距 */
+    background-color: #f8f8f8; /* 设置背景颜色为浅灰色，模拟纸张的颜色 */
+    border: 1px solid #ccc; /* 设置边框为1px的浅灰色实线，增加信件的立体感 */
+    border-radius: 10px; /* 设置圆角边框，使信件看起来更柔和 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 添加阴影效果，增强立体感 */
+    font-family: cursive; /* 使用通用的手写体字体 */
+    line-height: 1.6; /* 设置行高为1.6，使文字间距更舒适 */
+    text-align: left; /* 设置文字对齐方式为两端对齐 */
+}
+
+.blur-text {
+    filter: blur(3px); /* 添加模糊效果，数值越大模糊越明显 */
+    text-shadow: 0 0 2px rgba(0, 0, 0, 0.5); /* 添加阴影以增强模糊效果 */
+}
+
 
 button {
     margin: 10px; /* 设置按钮之间的外边距为10px */
@@ -35,5 +59,41 @@ button:hover {
 a {
     font-size: 16px; /* 设置按钮文字大小为16px */
     text-decoration: none;
-    color: #ffffff; 
+    color: #000000; 
+}
+
+
+
+
+.cardIn {
+    -webkit-animation: 1s forwards;
+    animation: 1s forwards;
+    -webkit-animation-name: cardIn;
+    animation-name: cardIn;
+}
+
+@-webkit-keyframes cardIn {
+    0% {
+        -webkit-transform: translate3d(0, 300px, 0) rotate(15deg);
+        transform: translate3d(0, 300px, 0) rotate(15deg);
+        opacity: 0;
+    }
+    to {
+        -webkit-transform: none;
+        transform: none;
+        opacity: 1;
+    }
+}
+
+@keyframes cardIn {
+    0% {
+        -webkit-transform: translate3d(0, 300px, 0) rotate(15deg);
+        transform: translate3d(0, 300px, 0) rotate(15deg);
+        opacity: 0;
+    }
+    to {
+        -webkit-transform: none;
+        transform: none;
+        opacity: 1;
+    }
 }
