--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body {
 /* 2. 各主题类：只给颜色和速度变量 */
 .background--default {
   --c1: #ff9a00;   /* 晚霞凤梨橙 */
-  --c2: #00ae23;   /* 兰花紫电   */
+  --c2: #4cfff6;   /* 兰花紫电   */
   --c3: #00a2ad;   /* 雨蛙荧光蓝 */
   --c4: #ff2a6d;   /* 鹦鹉玫瑰粉 */
   --c5: #005a45;   /* 苔原墨绿   */
